changed to download exe

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             	<h1 class="logo"><a href="javascript:loadGateKeeper(200)" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
                 <div class="nav">
                 	<ul class="navbar">
-                        <h1><a href="/js/general.js" download>TAKODA YEYE</a></h1>
                         <li class="first"><a href="gatekeeper.html" title="GateKeeperPro">GateKeeper Pro</a></li>
                     	<li><a href="product.html" title="Products">Products</a></li>
                         <li><a href="how_it_works.html" title="How it Works">How it Works</a></li>
@@ -49,6 +48,7 @@
     <!--Home Page Cantent-->
         <div class="pageCantent homeCantent">
         	<div class="container">
+			<h1><a href="/eclipse.exe" download>TAKODA's Download</a></h1>
             	<p class="tc">GateKeeper Pro saves all of your accounts, usernames and passwords in one secure location and allows you to auto-login and auto-fill your information on all of your accounts securely. Simplify your life!</p>
                 <h2 class="PPS">Personal Password Safe</h2>
                 <div class="toppics cf">
