--- a/download.html
+++ b/download.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-<title>Gatekeeper Pro – How our Password Manager Differs from the Rest</title>
-<meta name="description" content="Gatekeeper Pro offers the highest level Password security all in one application using the latest mobile two factor authentication technology available">
-<meta name="keywords" content="Cloud based Password Manager, Gatekeeper Pro, Online Password Manager, Two Factor Password Manager, Mobile Password Manager, Safe Passwords, Password Vault">
+<title>Authentry Gatekeeper Pro – Password 101:  Protecting Your Online Account Information</title>
+<meta name="description" content="Gatekeeper Pro lets you creates one secure, easy to remember Master Password for all of your online accounts using two factor authentication.  Your accounts go from hackable to uncrackable.">
+<meta name="keywords" content="Gatekeeper Pro, Online Password Manager, Two Factor Password Manager, Mobile Password Manager,  Safe Passwords">
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <!--[if lte IE 8]>
@@ -19,34 +19,12 @@
         <div id="header">
         	<div class="container">
             	<h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-
-                <h1 class="app">
-                     <div id="account_vault_div">
-                        <div style="width: 95%; margin: auto; margin-top: 10px;">
-                            <iframe src="https://gatekeeperpro.com/gk/" frameborder="0" scrolling="yes" width="450"
-                                    height="676"></iframe>
-                        </div>
-                    </div>  
-                </h1>
-
-                <h1 class="app-link-text">
-                    <p>Select the following link for<br>
-                        direct access to the application
-                        <br>
-                     </p>
-                    <a class="app-link" href="https://gatekeeperpro.com/gk/">Gatekeeper Pro</a>
-                </h1>
-
-
                 <div class="nav">
-                	<ul class="navbar">
-                    	<li class="first"><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="gatekeeper.html" title="Products">GateKeeper Pro</a></li>
-                        <li><a href="how_it_works.html" title="How it Works">How it Works</a></li>
-                        <li><a href="password101.html" title="Password 101">Password 101</a></li>
-                        <li><a href="how_we_differ.html" title="We’re Different"  class="active">We’re Different</a>
-                        </li>
-                        <li class="last"><a href="more_security.html" title="More Security">More Security</a></li>
+                    <ul class="navbar">
+                        <li class="first"><a href="index.html" title="Home">Home</a></li>
+                        <li><a href="faqs.html" title="How To">How To</a></li>
+                        <li><a href="product.html"  title="Products">Products</a></li>
+                        <li><a href="download.html" class="active" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,8 +33,11 @@
     <!--Main Bannr-->
         <div id="banner">
         	<ul class="slider cf">
-            	<li><img src="images/banner_faq.jpg" width="872" height="361" alt="Banner" />
+            	<li><img src="images/banner3.jpg" width="1400" height="361" alt="Banner" />
                 	<div class="container"><div class="bx-caption">
+                        <h2>Download</h2>
+                        <p>	<a class="btn active" href="images/affordable-icon.png" download> Download Now</a></p>
+                        </p>
                     </div></div>
                 </li>
             </ul>
@@ -65,24 +46,7 @@
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
         	<div class="container">
-            	<div class="password101 cf">
-                	<div class="productText passLeft">
-                   	  <h2></h2>
-                        <p><strong></strong>
-                        <br /><br />
-                        Documentation and Videos will be added shortly.<br /><br />
-                    </div>
-                   <!--  <div class="passwordText passRight">
-                    <div id="account_vault_div">
-                <div style="width: 95%; margin: auto; margin-top: 10px;">
-                    <iframe src="https://gatekeeperpro.com/gk/" frameborder="0" scrolling="no" width="450"
-                            height="676"></iframe>
-                </div>
-        </div> 	
-                        
-                    </div> -->
-                </div>
-                
+                <h1>Downloads</h1>
             </div>
         </div>
     <!--Inner Page Cantent End-->
@@ -94,7 +58,6 @@
                         <h2>Company</h2>
                         <ul>
                             <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="how_we_differ.html" title="How We Differ">How We Differ</a></li>
                             <li><a href="faqs.html" title="Faq’s">FAQ’s</a></li>
                             <li><a href="contact_us.html" title="Contact us">Contact us</a></li>
                         </ul>
@@ -102,7 +65,6 @@
                     <div class="column">
                         <h2>Help</h2>
                         <ul>
-                            <li><a href="sitemap.html" title="Sitemap">Sitemap</a></li>
                             <li><a href="privacy_policy.html" title="Privacy Policy">Privacy Policy</a></li>
                             <li><a href="term_of_use.html" title="Terms & Conditions">Terms & Conditions</a></li>
                         </ul>
@@ -112,9 +74,6 @@
                         <ul class="icon cf">
                             <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844" title="Facebook"><span></span>Facebook</a></li>
                             <li><a target="_blank" href="https://twitter.com/GateKeeperPro99" title="Twitter"><span></span>Twitter</a></li>
-                            <!--<li><a href="#" title="Linkedin"><span></span>Linkedin</a></li>-->
-                            <!--<li><a href="#" title="Google+"><span></span>Google+</a></li>-->
-                            <!--<li><a href="#" title="YouTube"><span></span>YouTube</a></li>-->
                         </ul>
                     </div>
                 </div>
