--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -19,15 +19,13 @@
     <!--Header-->
         <div id="header">
             <div class="container">
-                <h1 class="logo"><a href="javascript:loadGateKeeper(200)" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
+                <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
                 <div class="nav">
                     <ul class="navbar">
-                        <li class="first"><a href="gatekeeper.html" title="GateKeeperPro">GateKeeper Pro</a></li>
+                        <li class="first"><a href="index.html" title="Home">Home</a></li>
+                        <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="how_it_works.html" title="How it Works">How it Works</a></li>
-                        <li><a href="password101.html" title="Password 101">Password 101</a></li>
-                        <li><a href="how_we_differ.html" title="We’re Different">We’re Different</a></li>
-                        <li class="last"><a href="more_security.html" title="More Security">More Security</a></li>
+                        <li><a href="download.html" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -145,7 +143,6 @@
                         <h2>Company</h2>
                         <ul>
                             <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="how_we_differ.html" title="How We Differ">How We Differ</a></li>
                             <li><a href="faqs.html" title="Faq’s">FAQ’s</a></li>
                             <li><a href="contact_us.html" title="Contact us">Contact us</a></li>
                         </ul>
@@ -153,7 +150,6 @@
                     <div class="column">
                         <h2>Help</h2>
                         <ul>
-                            <li><a href="sitemap.html" title="Sitemap">Sitemap</a></li>
                             <li><a href="privacy_policy.html" title="Privacy Policy">Privacy Policy</a></li>
                             <li><a href="term_of_use.html" title="Terms & Conditions">Terms & Conditions</a></li>
                         </ul>
