--- a/product.html
+++ b/product.html
@@ -18,15 +18,13 @@
     <!--Header-->
         <div id="header">
         	<div class="container">
-            	<h1 class="logo"><a href="javascript:loadGateKeeper(200)" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
+            	<h1 class="logo"><a title="Gate Keeper" href="index.html"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
                 <div class="nav">
                 	<ul class="navbar">
-                        <li class="first"><a href="gatekeeper.html" title="GateKeeperPro">GateKeeper Pro</a></li>
-                        <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="how_it_works.html" title="How it Works">How it Works</a></li>
-                        <li><a href="password101.html" title="Password 101">Password 101</a></li>
-                        <li><a href="how_we_differ.html" title="We’re Different">We’re Different</a></li>
-                        <li class="last"><a href="more_security.html" title="More Security">More Security</a></li>
+                        <li class="first"><a href="index.html" title="Home">Home</a></li>
+                        <li><a href="faqs.html" title="How To">How To</a></li>
+                        <li><a href="product.html" class="active" title="Products">Products</a></li>
+                        <li><a href="download.html" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -72,29 +70,12 @@
                                     <li>Force and Man-in-the-middle attacks</li>
                                 </ul>
                             </div>
-                            <a href="cart1.php" class="btn" title="Buy Now">Buy Now</a>
+                            <a href="freeTrial.php" class="btn" title="Buy Now">Buy Now</a>
                         </div>
                     </div>
-                    <div class="catBlock catBlock2">
-                    	<div class="cat catSd">
-                    		<h3>LogiKey<sup>TM</sup> Secure USB Token</h3>
-                        	<img src="images/cat2.jpg" alt="" width="216" height="225" />
-                            <div class="text">
-                                <p>The LogiKey <sup>TM</sup> not only locks and unlocks your computer from unwanted guests, it also gives you two factor authentication and access to all of your online accounts on any desktop or laptop computer! If storing your encrypted passwords and information in the cloud or on your PC  makes you nervous, you can store everything directly on the LogiKey.</p>
-                                <ul>
-                                    <li>Light weight and convenient</li>
-                                    <li>AES256 Secure</li>
-                                    <li>Smart card encrypted</li>
-                                    <li>Secure read only USB</li>
-                                    <li>Superior security</li>
-                                    <li>Access anywhere</li>
-                                </ul>
-                            </div>
-                            <a href="cart2.php" class="btn" title="Buy Now">Buy Now</a>
-                        </div>
-                    </div>
+
                     <div class="catBlock">
-                    	<div class="cat catTd">
+                    	<div class="cat catSd">
                     		<h3>Mobile Two-factor Authentication</h3>
                         	<img src="images/cat3.jpg" alt="" width="216" height="225" />
                             <div class="text">
@@ -107,7 +88,6 @@
                                     <li>Keeps the bad guys out</li>
                                 </ul>
                             </div>
-                            <a href="more_security.html" class="btn" title="FREE !">FREE !</a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +102,6 @@
                         <h2>Company</h2>
                         <ul>
                             <li><a href="about.html" title="About">About</a></li>
-                            <li><a href="how_we_differ.html" title="How We Differ">How We Differ</a></li>
                             <li><a href="faqs.html" title="Faq’s">FAQ’s</a></li>
                             <li><a href="contact_us.html" title="Contact us">Contact us</a></li>
                         </ul>
@@ -130,7 +109,6 @@
                     <div class="column">
                         <h2>Help</h2>
                         <ul>
-                            <li><a href="sitemap.html" title="Sitemap">Sitemap</a></li>
                             <li><a href="privacy_policy.html" title="Privacy Policy">Privacy Policy</a></li>
                             <li><a href="term_of_use.html" title="Terms & Conditions">Terms & Conditions</a></li>
                         </ul>
