Removed pagecontent background that made pages hard to read

--- a/download.html
+++ b/download.html
@@ -47,6 +47,20 @@
         <div class="pageCantent innerCantent">
         	<div class="container">
                 <h1>Downloads</h1>
+                <table class="">
+                    <thead>
+                    <tr>
+                    <th style="border: solid blue 2px; padding: 30px;">Version</th>
+                    <th style="border: solid blue 2px; padding: 30px;">Release Date</th>
+                    <th style="border: solid blue 2px; padding: 30px;">Download Link</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr><td style="border: solid blue 2px; padding: 30px;">1.0</td>
+                    <td style="border: solid blue 2px; padding: 30px;">09/27/2017</td>
+                    <td style="border: solid blue 2px; padding: 30px;"><a href="#" download> Click Here</a></td></tbody>
+                    </tbody>
+                </table>
             </div>
         </div>
     <!--Inner Page Cantent End-->
