Removed unused content

--- a/faqs.html
+++ b/faqs.html
@@ -45,7 +45,7 @@
     <!--Main Bannr End-->
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
-            <div class="container">
+            <div class="container" id="faqContainer">
                 <div class="password101 cf">
                     <div class="faqs">
                         <h2></h2>
