--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <!--Main Bannr End-->
     <!--Home Page Cantent-->
         <div class="pageCantent homeCantent">
-        	<div class="container">
-			<h1><a href="/eclipse.exe" download>TAKODA's Download</a></h1>
+        	<div class="container" id="homepageContainer">
             	<p class="tc">GateKeeper Pro saves all of your accounts, usernames and passwords in one secure location and allows you to auto-login and auto-fill your information on all of your accounts securely. Simplify your life!</p>
                 <h2 class="PPS">Personal Password Safe</h2>
                 <div class="toppics cf">
