--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
     <!--Main Bannr End-->
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
-        	<div class="container">
+        	<div class="container" id="productContainer">
             	<div class="identityWorth cf">
                 	<h2><span>What’s Your Identity Worth?</span></h2>
                 	<p>Comprehensive account protection with Gatekeeper Pro helps safeguard you from hackers and fraudulent activity. In today’s connected world that’s more important than ever.</p>
@@ -55,7 +55,7 @@
                     	<div class="cat catFt">
                     		<h3>Gatekeeper Pro Password Manager</h3>
                         	<img src="images/cat1.jpg" alt="" width="216" height="225" />
-                            <div class="text">
+                            <div class="text" id="gatekeeperProductDescription">
                                 <p>Online merchants and secure websites in most cases don’t have the proper level of security in place to keep your personal information safe. GateKeeper Pro keeps all of your account information safe in one location and allows you to create different  passwords for every account that are virtually un-hackable, and you only have to remember one master password to access any account on any device from any location.</p>
                                 <ul>
                                     <li>Auto Fill does the work for you</li>
@@ -70,7 +70,7 @@
                                     <li>Force and Man-in-the-middle attacks</li>
                                 </ul>
                             </div>
-                            <a href="freeTrial.php" class="btn" title="Buy Now">Buy Now</a>
+                            <a href="freeTrial.php" class="btn" title="Free Trial">Free Trial</a>
                         </div>
                     </div>
 
@@ -78,7 +78,7 @@
                     	<div class="cat catSd">
                     		<h3>Mobile Two-factor Authentication</h3>
                         	<img src="images/cat3.jpg" alt="" width="216" height="225" />
-                            <div class="text">
+                            <div class="text" id="twoFAProductDescription">
                                 <p>Our Mobile Passcode Verification feature comes FREE with GateKeeper Pro. It adds Two factor authentication when logging into your accounts. Think of it as a second layer of security beyond your password.  With one click MPV sends a one time Passcode to your mobile device that you use when logging into your accounts in addition to your password. Convenience and Security has never been easier.</p>
                                 <ul>
                                     <li>Easy one touch access</li>
@@ -88,6 +88,7 @@
                                     <li>Keeps the bad guys out</li>
                                 </ul>
                             </div>
+                            <a href="freeTrial.php" class="btn" title="Free Download">Free Download</a>
                         </div>
                     </div>
                 </div>
