Bootstrap now incorporated, with conflicts resolved

--- a/contact_us.html
+++ b/contact_us.html
@@ -16,14 +16,14 @@
     <div id="wrapper">
     <!--Header-->
         <div id="header">
-            <div class="container">
+            <div class="containerOld">
                 <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
                 <div class="nav">
-                    <ul class="navbar">
+                    <ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,10 +33,10 @@
         <div id="banner">
             <ul class="slider cf">
                 <li><img src="images/banner1.jpg" width="1400" height="361" alt="Banner" />
-                    <div class="container"><div class="bx-caption">
+                    <div class="containerOld"><div class="bx-caption">
                         <h2>Protect What Matters Most.</h2>
                         <p>Personal password and account security has<br />never been easier, or more affordable.</p>
-                        <a href="#" class="btn" title="Protect Me Now">Protect Me Now</a>
+                        <a href="#" class="btnOld" title="Protect Me Now">Protect Me Now</a>
                     </div></div>
                 </li>
             </ul>
@@ -44,7 +44,7 @@
     <!--Main Bannr End-->
     <!--Home Page Cantent-->
         <div class="pageCantent homeCantent">
-            <div class="container">
+            <div class="containerOld">
             	<div class="contactus cf">
                 	<h2>We’re here to help you</h2>
                     <p>Our customers benefit from the highest levels of security the industry offers, all backed by our friendly and dedicated support team.</p>
@@ -61,7 +61,7 @@
     <!--Home Page Cantent End-->
     <!--Footer-->
         <div id="footer">
-            <div class="container">
+            <div class="containerOld">
                 <div class="columns">
                     <div class="column">
                         <h2>Company</h2>
