--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 <title>Authentry Gatekeeper Pro – Two Factor Authentication Password Manager</title>
 <meta name="description" content="Authentry’s Gatekeeper Pro secure Password Manager and LogiKey USB Token use the latest Two Factor Authentication technology to keep all of your passwords safe.">
 <meta name="keywords" content="Authentry, Gatekeeper Pro, LogiKey, Secure Password Generator, Password Manager, Password Management, Password Recovery, Identity Theft Protection, Password Vault, Password Safe, Two Factor Authentication, 2 Factor Authentication, Duo Security, Last Pass, Yubico, YubiKey">
-<link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
-<script type="text/javascript" src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
+
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+
+    <script type="text/javascript" src="js/jquery.min.js"></script>
 <!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="css/ie.css" media="all"/>
 <![endif]-->
@@ -17,14 +21,14 @@
 	<div id="wrapper">
     <!--Header-->
         <div id="header">
-        	<div class="container">
+        	<div class="containerOld">
             	<h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
-                	<ul class="navbar">
+                <div class="navOld">
+                	<ul class="navbarOld">
                         <li class="first"><a href="index.html" class="active" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                     	<li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
 
                     </ul>
                 </div>
@@ -35,10 +39,10 @@
         <div id="banner">
         	<ul class="slider cf">
             	<li><img src="images/banner1.jpg" width="1400" height="361" alt="Banner" />
-                	<div class="container"><div class="bx-caption">
+                	<div class="containerOld"><div class="bx-caption">
                         <h2>Protect What Matters Most.</h2>
                         <p>Personal password and account security has<br />never been easier, or more affordable.</p>
-                        <a href="product.html" class="btn" title="Protect Me Now">Protect Me Now</a>
+                        <a href="product.html" class="btnOld" title="Protect Me Now">Protect Me Now</a>
                     </div></div>
                 </li>
             </ul>
@@ -46,7 +50,7 @@
     <!--Main Bannr End-->
     <!--Home Page Cantent-->
         <div class="pageCantent homeCantent">
-        	<div class="container" id="homepageContainer">
+        	<div class="containerOld" id="homepageContainer">
             	<p class="tc">GateKeeper Pro saves all of your accounts, usernames and passwords in one secure location and allows you to auto-login and auto-fill your information on all of your accounts securely. Simplify your life!</p>
                 <h2 class="PPS">Personal Password Safe</h2>
                 <div class="toppics cf">
@@ -56,7 +60,7 @@
                         	<p>We’re not just another password manager, we are a  security company, so we take your personal data security very seriously, from our state of the art facilities, to the highest standards in encryption and Multi-factor authentication features. Our customers rely on us to keep their accounts and identities safe 24x7x365 and that’s exactly what we do!</p>
                         	<p><strong>Let us show you what security really means.</strong></p>
                         </div>
-                        <a href="product.html" class="btn" title="Sign up now">Sign up now</a>
+                        <a href="product.html" class="btnOld" title="Sign up now">Sign up now</a>
                     </div>
                     <div class="toppic convenient">
                     	<h2>Convenient</h2>
@@ -64,7 +68,7 @@
                         	<p>Technology should be easy to use without compromising security. GateKeeper Pro Two- factor password manager is one of the industries most convenient and secure solutions for non-technical and technical users alike. Our customers rave over the simplicity and the robustness of our secure features. With just a few clicks you are up and running protecting your online world.</p>
                         	<p><strong>Let us show you what makes our customers the happiest most protected customers on the planet.</strong></p>
                         </div>
-                        <a href="product.html" class="btn" title="Sign up now">Sign up now</a>
+                        <a href="product.html" class="btnOld" title="Sign up now">Sign up now</a>
                     </div>
                     <div class="toppic affordable">
                     	<h2>Affordable</h2>
@@ -72,12 +76,12 @@
                         	<p>What's your identity worth? Never before has a password manager offered so much for so little.  We don’t believe in “FREE” because when something is free you can bet it’s missing something. In today’s world of hackers and data thieves you simply can’t rely on free technology, when what you really need is iron clad security that gives you peace of mind.</p>
                         	<p><strong>Only $1.66 a month. Its practically free, but way better! It takes hackers about 10 minutes to break into an average online account and only 30 seconds to stop them.</strong></p>
                         </div>
-                        <a href="product.html" class="btn" title="Sign up now">Sign up now</a>
+                        <a href="product.html" class="btnOld" title="Sign up now">Sign up now</a>
                     </div>
                 </div>
             </div>
             <div class="banner">
-            	<div class="container cf">
+            	<div class="containerOld cf">
                 	<div class="text">
                     	<p>Securely Create, Access and Manage all of your accounts and passwords on any device from any location.</p>
                 		<a href="#" title="Even here...">Even here...</a>
@@ -85,7 +89,7 @@
                 </div>
             </div>
             <div class="testi">
-            	<div class="container">
+            	<div class="containerOld">
                     <h2>Our customers <span>Love us</span>. And we appreciated that!</h2>
                     <div class="sliderText">
                         <div class="textbar">
@@ -107,7 +111,7 @@
     <!--Home Page Cantent End-->
     <!--Footer-->
     	<div id="footer">
-        	<div class="container">
+        	<div class="containerOld">
             	<div class="columns">
                     <div class="column">
                         <h2>Company</h2>
@@ -129,9 +133,6 @@
                         <ul class="icon cf">
                             <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844" title="Facebook"><span></span>Facebook</a></li>
                             <li><a target="_blank" href="https://twitter.com/GateKeeperPro99" title="Twitter"><span></span>Twitter</a></li>
-                            <!--<li><a href="#" title="Linkedin"><span></span>Linkedin</a></li>-->
-                            <!--<li><a href="#" title="Google+"><span></span>Google+</a></li>-->
-                            <!--<li><a href="#" title="YouTube"><span></span>YouTube</a></li>-->
                         </ul>
                     </div>
                 </div>
