--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -18,14 +18,14 @@
     <div id="wrapper">
     <!--Header-->
         <div id="header">
-            <div class="container">
+            <div class="containerOld">
                 <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
-                    <ul class="navbar">
+                <div class="navOld">
+                    <ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,10 +35,10 @@
         <div id="banner">
             <ul class="slider cf">
                 <li><img src="images/banner1.jpg" width="1400" height="361" alt="Banner" />
-                    <div class="container"><div class="bx-caption">
+                    <div class="containerOld"><div class="bx-caption">
                         <h2>Protect What Matters Most.</h2>
                         <p>Personal password and account security has<br />never been easier, or more affordable.</p>
-                        <a href="#" class="btn" title="Protect Me Now">Protect Me Now</a>
+                        <a href="#" class="btnOld" title="Protect Me Now">Protect Me Now</a>
                     </div></div>
                 </li>
             </ul>
@@ -47,7 +47,7 @@
     <!--Home Page Cantent-->
     <a name="top" href=""></a>
         <div class="pageCantent homeCantent">
-            <div class="container">
+            <div class="containerOld">
                 <div class="privacypolicy cf">
                     <h2>Introduction</h2>
                     <p>We at AuthEntry LLC are committed to respecting your online privacy and recognize your need for appropriate protection and management of any personally identifiable information ("Personal Information") you share with us. AuthEntry LLC has established this Online Privacy Policy so that you can understand the care with which we intend to treat your Personal Information.<br />For the purposes of this statement, "Personal Information" means any information that may be used to identify an individual, including, but not limited to, a first and last name, a home or other physical address and an email address or other contact information, whether at work or at home. In general, you can visit AuthEntry LLC's Web pages without telling us who you are or revealing any Personal Information about yourself.
@@ -137,7 +137,7 @@
     <!--Home Page Cantent End-->
     <!--Footer-->
         <div id="footer">
-            <div class="container">
+            <div class="containerOld">
                 <div class="columns">
                     <div class="column">
                         <h2>Company</h2>
