--- a/product_1.html
+++ b/product_1.html
@@ -15,14 +15,14 @@
 	<div id="wrapper">
     <!--Header-->
         <div id="header">
-        	<div class="container">
+        	<div class="containerOld">
             	<h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
-                	<ul class="navbar">
+                <div class="navOld">
+                	<ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,7 +31,7 @@
     
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
-        	<div class="container">
+        	<div class="containerOld">
             	<div class="identityWorth cf">
                 	<h2><span>What’s Your Identity Worth?</span></h2>
                 	<p>Comprehensive account protection with Gatekeeper Pro helps safeguard you from hackers and fraudulent activity. In today’s connected world that’s more important than ever.</p>
@@ -56,7 +56,7 @@
                                     <li>Force and Man-in-the-middle attacks</li>
                                 </ul>
                             </div>
-                            <a href="freeTrial.php" class="btn" title="Buy Now">Buy Now</a>
+                            <a href="download.php" class="btn" title="Buy Now">Buy Now</a>
                         </div>
                     </div>
                     <div class="catBlock catBlock2">
@@ -91,7 +91,7 @@
                                     <li>Keeps the bad guys out</li>
                                 </ul>
                             </div>
-                            <a href="freeTrial.php" class="btn" title="Buy Now">Buy Now</a>
+                            <a href="download.php" class="btn" title="Buy Now">Buy Now</a>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
     <!--Inner Page Cantent End-->
     <!--Footer-->
     	<div id="footer">
-        	<div class="container">
+        	<div class="containerOld">
             	<div class="columns">
                     <div class="column">
                         <h2>Company</h2>
