--- a/term_of_use.html
+++ b/term_of_use.html
@@ -18,14 +18,14 @@
     <div id="wrapper">
     <!--Header-->
         <div id="header">
-            <div class="container">
+            <div class="containerOld">
                 <h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
-                    <ul class="navbar">
+                <div class="navOld">
+                    <ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,7 +35,7 @@
         <div id="banner">
             <ul class="slider cf">
                 <li><img src="images/banner1.jpg" width="1400" height="361" alt="Banner" />
-                    <div class="container"><div class="bx-caption">
+                    <div class="containerOld"><div class="bx-caption">
                         <h2>Protect What Matters Most.</h2>
                         <p>Personal password and account security has<br />never been easier, or more affordable.</p>
                         <a href="#" class="btn" title="Protect Me Now">Protect Me Now</a>
@@ -46,7 +46,7 @@
     <!--Main Bannr End-->
     <!--Home Page Cantent-->
         <div class="pageCantent homeCantent">
-            <div class="container">
+            <div class="containerOld">
                 <div class="termofuse cf">
                   <p>AuthEntry LLC,<br />
 MASTER SERVICES AGREEMENT<br />
@@ -170,7 +170,7 @@ Entire Agreement, Severability, Waiver. This Agreement constitutes the entire a
     <!--Home Page Cantent End-->
     <!--Footer-->
         <div id="footer">
-            <div class="container">
+            <div class="containerOld">
                 <div class="columns">
                     <div class="column">
                         <h2>Company</h2>
@@ -192,9 +192,6 @@ Entire Agreement, Severability, Waiver. This Agreement constitutes the entire a
                         <ul class="icon cf">
                             <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844" title="Facebook"><span></span>Facebook</a></li>
                             <li><a target="_blank" href="https://twitter.com/GateKeeperPro99" title="Twitter"><span></span>Twitter</a></li>
-                            <!--<li><a href="#" title="Linkedin"><span></span>Linkedin</a></li>-->
-                            <!--<li><a href="#" title="Google+"><span></span>Google+</a></li>-->
-                            <!--<li><a href="#" title="YouTube"><span></span>YouTube</a></li>-->
                         </ul>
                     </div>
                 </div>
