--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
 	<div id="wrapper">
     <!--Header-->
         <div id="header">
-        	<div class="container">
+        	<div class="containerOld">
             	<h1 class="logo"><a href="index.html" title="Gate Keeper"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
-                    <ul class="navbar">
+                <div class="navOld">
+                    <ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +34,7 @@
         <div id="banner">
         	<ul class="slider cf">
             	<li><img src="images/banner_about.jpg" width="1400" height="361" alt="Banner" />
-                	<div class="container"><div class="bx-caption">
+                	<div class="containerOld"><div class="bx-caption">
                         <h2>About Us</h2>
                         <p></p>
                     </div></div>
@@ -44,7 +44,7 @@
     <!--Main Bannr End-->
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
-        	<div class="container">
+        	<div class="containerOld">
             	<div class="password101 cf">
                 	<div class="passwordText passLeft">
                     	<h2>Company Description</h2>
@@ -61,7 +61,7 @@
     <!--Inner Page Cantent End-->
     <!--Footer-->
     	<div id="footer">
-        	<div class="container">
+        	<div class="containerOld">
             	<div class="columns">
                     <div class="column">
                         <h2>Company</h2>
