--- a/product.html
+++ b/product.html
@@ -17,14 +17,14 @@
 	<div id="wrapper">
     <!--Header-->
         <div id="header">
-        	<div class="container">
+        	<div class="containerOld">
             	<h1 class="logo"><a title="Gate Keeper" href="index.html"><img src="images/logo.png" width="316" height="289" alt="Gate Keeper" /></a></h1>
-                <div class="nav">
-                	<ul class="navbar">
+                <div class="navOld">
+                	<ul class="navbarOld">
                         <li class="first"><a href="index.html" title="Home">Home</a></li>
                         <li><a href="faqs.html" title="How To">How To</a></li>
                         <li><a href="product.html" class="active" title="Products">Products</a></li>
-                        <li><a href="download.html" title="Download">Download</a></li>
+                        <li><a href="download.php" title="Download">Download</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,10 +34,9 @@
         <div id="banner">
         	<ul class="slider cf">
             	<li><img src="images/banner2.jpg" width="1400" height="361" alt="Banner" />
-                	<div class="container"><div class="bx-caption">
+                	<div class="containerOld"><div class="bx-caption">
                         <h2>Online Fraud Protection.</h2>
                         <p>Hackers are everwhere looking to steal your private information. Defend yourself and keep the bad guys out!</p>
-                        <!--<a href="#" class="btn" title="Protect Me Now">Protect Me Now</a>-->
                     </div></div>
                 </li>
             </ul>
@@ -45,7 +44,7 @@
     <!--Main Bannr End-->
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
-        	<div class="container" id="productContainer">
+        	<div class="containerOld" id="productContainer">
             	<div class="identityWorth cf">
                 	<h2><span>What’s Your Identity Worth?</span></h2>
                 	<p>Comprehensive account protection with Gatekeeper Pro helps safeguard you from hackers and fraudulent activity. In today’s connected world that’s more important than ever.</p>
@@ -70,7 +69,7 @@
                                     <li>Force and Man-in-the-middle attacks</li>
                                 </ul>
                             </div>
-                            <a href="freeTrial.php" class="btn" title="Free Trial">Free Trial</a>
+                            <a href="download.php" class="btnOld" title="Free Trial">Free Trial</a>
                         </div>
                     </div>
 
@@ -88,7 +87,7 @@
                                     <li>Keeps the bad guys out</li>
                                 </ul>
                             </div>
-                            <a href="freeTrial.php" class="btn" title="Free Download">Free Download</a>
+                            <a href="download.php" class="btnOld" title="Free Download">Free Download</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +96,7 @@
     <!--Inner Page Cantent End-->
     <!--Footer-->
     	<div id="footer">
-        	<div class="container">
+        	<div class="containerOld">
             	<div class="columns">
                     <div class="column">
                         <h2>Company</h2>
@@ -119,9 +118,6 @@
                         <ul class="icon cf">
                             <li><a target="_blank" href="https://www.facebook.com/pages/Gatekeeperpro/1510819719133844" title="Facebook"><span></span>Facebook</a></li>
                             <li><a target="_blank" href="https://twitter.com/GateKeeperPro99" title="Twitter"><span></span>Twitter</a></li>
-                            <!--<li><a href="#" title="Linkedin"><span></span>Linkedin</a></li>-->
-                            <!--<li><a href="#" title="Google+"><span></span>Google+</a></li>-->
-                            <!--<li><a href="#" title="YouTube"><span></span>YouTube</a></li>-->
                         </ul>
                     </div>
                 </div>
