Added slides on how to page

--- a/faqs.html
+++ b/faqs.html
@@ -46,6 +46,16 @@
     <!--Inner Page Cantent-->
         <div class="pageCantent innerCantent">
             <div class="containerOld" id="faqContainer">
+			<h1>1) Click Facebook Google LinkedIn Twitter Button To Create An Account </h1>
+			<img src="images/step1.jpg" />
+			<hr />
+			<h1>2) Choose the Account That You Would Like To Register With</h1>
+			<img src="images/step2.jpg" />
+			<hr />
+			<h1>3) We Chose LinkedIN to Create Our Account</h1>
+			<img src="images/step3.jpg" />
+			<iframe src='https://ussicorp5-my.sharepoint.com/personal/takoda_register_staples_com/_layouts/15/WopiFrame.aspx?sourcedoc={9d4a2a6b-b009-4051-98c9-8fb46d986241}&action=embedview&wdAr=1.7777777777777777' width='962px' height='565px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+
                 <div class="password101 cf">
                     <div class="faqs">
                         <h2></h2>
