Font-Awesome added for icons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 	<div class="containerOld"><div class="bx-caption">
                         <h2>Protect What Matters Most.</h2>
                         <p>Personal password and account security has<br />never been easier, or more affordable.</p>
-                        <a href="product.html" class="btnOld" title="Protect Me Now">Protect Me Now</a>
+                        <a href="download.php" class="btnOld" title="Protect Me Now">Protect Me Now</a>
                     </div></div>
                 </li>
             </ul>
