--- a/howTo.html
+++ b/howTo.html
@@ -30,8 +30,7 @@
                     <li><a href="product.html" title="Products">Products</a></li>
                     <li><a href="download.php" title="Download" id="down1">Download</a></li>
                     <li><a href="forum" title="forum">Forum</a></li>
-                    <li><i id="btnHelp" title="Help" onclick="startHelper()" class="fa fa-question-circle"></i></li>
-                </ul>
+<li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()" class="fa fa-question-circle"></i></li>                </ul>
             </div>
         </div>
     </div>
@@ -51,8 +50,30 @@
     </div>
     <!--Main Bannr End-->
     <!--Inner Page Cantent-->
-    <div class="pageCantent innerCantent">
-
+   
+	
+	
+	
+	
+	<div class="col-12 col-md-3 col-xl-2 bd-sidebar">      
+<nav class="bd-links" id="bd-docs-nav">
+  <div class="bd-toc-item ">
+      <ul class="nav bd-sidenav">
+          <li class="">
+            <a href="/docs/4.0/getting-started/introduction/">
+              Introduction
+            </a>
+          </li>
+          <li class="">
+            <a href="/docs/4.0/getting-started/download/">
+              Download
+            </a>      
+          </li>
+      </ul>
+    </div>
+</nav>
+</div>
+ <div class="pageCantent innerCantent  col-md-9 col-xl-10">
         <div class="containerOld" id="faqContainer">
             <div class="password101 cf">
 			<div class="col-lg-12 col-md-12 col-sm-12" id="howtoIframe">
